# langchain-rag-tutorial-basic

./: README.md  compare_embeddings.py  create_database.py  pyproject.toml  query_data.py
